@@ -5,6 +5,19 @@ require 'rbconfig'
 
 class TestGemPlatform < RubyGemTestCase
 
+  def test_self_const_missing
+    consts = [:DARWIN, :LINUX_586, :MSWIN32, :PPC_DARWIN, :WIN32, :X86_LINUX]
+
+    consts.each do |const|
+      e = assert_raise NameError do
+        Gem::Platform.const_missing const
+      end
+
+      assert_equal "#{const} has been removed, use CURRENT instead",
+                   e.message
+    end
+  end
+
   def test_self_local
     util_set_arch 'i686-darwin8.10.1'
 
